--- a/templates/list_alfajores.html
+++ b/templates/list_alfajores.html
@@ -1,26 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+{% extends 'base.html'%}
+
+
+
+
+{%block content%}
 <body>
     <h1> Listado de Alfajores</h1>
 
     {% for alfajores in alfajores%}
 
-        <p>Alfajor: {{alfajores.name}}</p>
-        <p>Precio: {{alfajores.price}}</p>
-        <p>Stock: {{alfajores.stock}}</p>
+    <div class="card" style="width: 18rem;">
+        <img src="https://lycee.com.ar/wp-content/uploads/2021/12/el-alfajor-un-clasico-nacional.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Alfajor: {{alfajores.name}}</h5>
+          <p class="card-text">Precio: {{alfajores.price}}</p>
+          {% if alfajores.stock == False%}
+          <p> No contamos con stock </p>
+          {%endif%}
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
 
-        {% if alfajores.stock == False%}
-        <p> No contamos con stock </p>
-        {%endif%}
+      
+      
+    
     {% endfor %}
     
-
-    
+{%endblock%}
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+        
 </body>
 </html>
