--- a/templates/list_birthday.html
+++ b/templates/list_birthday.html
@@ -1,20 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+{% extends 'base.html'%}
+
+{%block content%}
+
 <body>
     <h1> Listado de Tortas de Cumpleaños</h1>
     {% for birthday in birthday%}
 
-        <p>Torta: {{birthday.name}}</p>
-        <p>Precio: {{birthday.price}}</p>
-        <p>Stock: {{birthday.stock}}</p>
+
+    <div class="card" style="width: 18rem;">
+        <img src="https://mysuenos.com/wp-content/uploads/2019/07/torta-cumpleanos.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Torta: {{birthday.name}}</h5>
+          <p class="card-text">Precio: {{birthday.price}}</p>
+          {% if birthday.stock == True %}
+          <p>Contamos con stock</p>
+          {% endif %}
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+       
         
     {% endfor %}
+
+
+ {%endblock%}
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+
     
 </body>
 </html>
+
