--- a/templates/list_cakes.html
+++ b/templates/list_cakes.html
@@ -4,6 +4,8 @@
 
 {%block content%}
     <h1> Listado de Tortas Heladas</h1>
+    <h2> Crear nueva torta </h2> <a href="/cakes/create-cake/" class="btn btn-primary"> Crear</a>
+
     {% for cake in cakes%}
 
     <div class="card" style="width: 18rem;">
