--- a/templates/list_birthday.html
+++ b/templates/list_birthday.html
@@ -4,6 +4,7 @@
 
 <body>
     <h1> Listado de Tortas de Cumpleaños</h1>
+    <h2> Crear nueva torta </h2> <a href="/cakes/create-birthday/" class="btn btn-primary"> Crear</a>
     {% for birthday in birthday%}
 
 
@@ -15,7 +16,7 @@
           {% if birthday.stock == True %}
           <p>Contamos con stock</p>
           {% endif %}
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Comprar</a>
         </div>
       </div>
 
