--- a/templates/create_alfajores.html
+++ b/templates/create_alfajores.html
@@ -19,6 +19,9 @@
 
         <input type="submit" value= "Crear alfajor">
 
+        {%else%}
+        <p> Alfajor Creado</p>
+
    
     {% endif%}
 
