--- a/templates/create_cake.html
+++ b/templates/create_cake.html
@@ -14,7 +14,7 @@
         {% csrf_token %}
 
         <p> Nombre: <input type="text" name="name"> </p>
-        <p> Precio: <input type="number" name="price"> </p>
+        <p> Precio: <input type="number" name="price" required> </p>
 
         <input type="submit" value= "Crear torta">
 
