--- a/templates/create_birthday.html
+++ b/templates/create_birthday.html
@@ -19,7 +19,8 @@
 
         <input type="submit" value= "Crear torta">
 
-   
+    {%else%}
+    <p> Torta Creada</p>
     {% endif%}
 
         {% if form_errors %}
