--- a/templates/create_alfajores.html
+++ b/templates/create_alfajores.html
@@ -20,7 +20,7 @@
         <input type="submit" value= "Crear alfajor">
 
         {%else%}
-        <p> Alfajor Creado</p>
+        <p> Alfajor Creado Exitosamente!!!</p>
 
    
     {% endif%}
