--- a/templates/list_alfajores.html
+++ b/templates/list_alfajores.html
@@ -21,6 +21,9 @@
             <p>Contamos con stock </p>
           {%endif%}
           <a href="#" class="btn btn-primary">Comprar</a>
+          <a href="#" class="btn btn-primary">Actualizar</a>
+          <p></p>
+          <a href="#" class="btn btn-primary">Borrar</a>
         </div>
       </div>
 
