--- a/templates/list_birthday.html
+++ b/templates/list_birthday.html
@@ -17,6 +17,7 @@
           <p>Contamos con stock</p>
           {% endif %}
           <a href="#" class="btn btn-primary">Comprar</a>
+          <a href="/cakes/update-birthday/{{birthday.id}}/" class="btn btn-primary">Actualizar</a>
         </div>
       </div>
 
