--- a/templates/update_alfajores.html
+++ b/templates/update_alfajores.html
@@ -1,11 +1,11 @@
 {% extends 'base.html'%}
 
 {% block title %}
-    Actualizacion de Tortas de Cumpleaños
+    Actualizacion de Alfajores
 {%endblock%}
 
 {% block content%}
-    <h1> Actualizar Torta de cumpleaños </h1>
+    <h1> Actualizar Alfajor</h1>
 
     {% if form %}
 
@@ -21,7 +21,7 @@
         
 
     {%else%}
-    <p> Torta actualizada</p>
+    <p> Alfajor actualizado</p>
     {% endif%}
 
         {% if form_errors %}
