--- a/templates/list_alfajores.html
+++ b/templates/list_alfajores.html
@@ -6,7 +6,11 @@
 {%block content%}
 <body>
     <h1> Listado de Alfajores</h1>
+    {% if request.user.is_authenticated%}
+      {% if request.user.is_superuser or request.user.is_staff %}
     <h2> Crear nuevo alfajor </h2> <a href="/cakes/create-alfajores/" class="btn btn-primary"> Crear</a>
+      {%endif%}
+    {%endif%}
 
     {% for alfajores in alfajores%}
 
@@ -21,9 +25,17 @@
             <p>Contamos con stock </p>
           {%endif%}
           <a href="#" class="btn btn-primary">Comprar</a>
-          <a href="#" class="btn btn-primary">Actualizar</a>
+          {% if request.user.is_authenticated%}
+             {% if request.user.is_superuser or request.user.is_staff %}
+          <a href="/cakes/update-alfajores/{{alfajores.id}}/" class="btn btn-primary">Actualizar</a>
+            {%endif%}
+          {%endif%}
           <p></p>
-          <a href="#" class="btn btn-primary">Borrar</a>
+          {% if request.user.is_authenticated%}
+            {% if request.user.is_superuser or request.user.is_staff %}
+          <a href="/cakes/delete-alfajores/{{alfajores.id}}/"class="btn btn-danger">Borrar</a>
+            {%endif%}
+          {%endif%}
         </div>
       </div>
 
