--- a/templates/list_alfajores.html
+++ b/templates/list_alfajores.html
@@ -5,45 +5,47 @@
 
 {%block content%}
 <body>
-    <h1> Listado de Alfajores</h1>
+    <h1 style="text-align:center;"> Listado de Alfajores</h1>
     {% if request.user.is_authenticated%}
       {% if request.user.is_superuser or request.user.is_staff %}
-    <h2> Crear nuevo alfajor </h2> <a href="/cakes/create-alfajores/" class="btn btn-primary"> Crear</a>
+    <h2 style="text-align:center;"> Crear nuevo alfajor </h2> <div style="text-align:center;"><a href="/cakes/create-alfajores/" class="btn btn-primary"> Crear</a><div>
       {%endif%}
     {%endif%}
 
-    {% for alfajores in alfajores%}
-
-    <div class="card" style="width: 18rem;">
-        <img src="https://lycee.com.ar/wp-content/uploads/2021/12/el-alfajor-un-clasico-nacional.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Alfajor: {{alfajores.name}}</h5>
-          <p class="card-text">Precio: {{alfajores.price}}</p>
-          {% if alfajores.stock == False%}
-          <p> No contamos con stock </p>
+    <div class="d-flex" style="margin-top:5rem; margin-left:7rem">
+      {% for alfajores in alfajores%}
+        <div class="card" style="width: 18rem;">  
+          {% if alfajores.imagen %}
+          <img src="{{alfajores.imagen.url}}" class="card-img-top">
+          {% endif %}
+          <div class="card-body">
+            <h5 class="card-title">Alfajor: {{alfajores.name}}</h5>
+            <p class="card-text">Precio: {{alfajores.price}}</p>
+            {% if alfajores.stock == False%}
+            <p> No contamos con stock </p>
             {% else %}
             <p>Contamos con stock </p>
-          {%endif%}
-          <a href="#" class="btn btn-primary">Comprar</a>
-          {% if request.user.is_authenticated%}
+            {%endif%}
+            <a href="#" class="btn btn-primary">Comprar</a>
+            {% if request.user.is_authenticated%}
              {% if request.user.is_superuser or request.user.is_staff %}
-          <a href="/cakes/update-alfajores/{{alfajores.id}}/" class="btn btn-primary">Actualizar</a>
+            <a href="/cakes/update-alfajores/{{alfajores.id}}/" class="btn btn-primary">Actualizar</a>
+              {%endif%}
             {%endif%}
-          {%endif%}
-          <p></p>
-          {% if request.user.is_authenticated%}
-            {% if request.user.is_superuser or request.user.is_staff %}
-          <a href="/cakes/delete-alfajores/{{alfajores.id}}/"class="btn btn-danger">Borrar</a>
+            <p></p>
+            {% if request.user.is_authenticated%}
+             {% if request.user.is_superuser or request.user.is_staff %}
+            <a href="/cakes/delete-alfajores/{{alfajores.id}}/"class="btn btn-danger">Borrar</a>
+              {%endif%}
             {%endif%}
-          {%endif%}
         </div>
       </div>
-
+    
       
       
     
-    {% endfor %}
-    
+      {% endfor %}
+    </div>
 {%endblock%}
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
