--- a/templates/index.html
+++ b/templates/index.html
@@ -10,11 +10,23 @@
   
 {%endif%}
 
-<div class="row">
-  <div class="col-lg-12">
-      <img class="img-fluid" src="https://pbs.twimg.com/media/FJoyInkX0AQrYqk?format=jpg&name=large" />
+<div class="card-deck">
+  <div class="card">
+    <img src="https://pbs.twimg.com/media/FoJFwTnX0Agud6c?format=jpg&name=small" class="card-img-top" alt="...">
+    <div class="card-body">
+    </div>
   </div>
-</div>
+  <div class="card">
+    <img src="https://pbs.twimg.com/media/FoJChIIWAAI1GET?format=jpg&name=small" class="card-img-top" alt="...">
+    <div class="card-body">
+    </div>
+  </div>
+  <div class="card">
+    <img src="https://pbs.twimg.com/media/FoJFa_zXgAIpy1l?format=jpg&name=small" class="card-img-top" alt="...">
+    <div class="card-body">
+    </div>
+  </div>
+</div> 
 
 
 
